Name: hsc2hs
Version: 0.67
Copyright: 2000, Marcin Kowalczyk
Build-Depends: base
License: BSD3
License-File: LICENSE
Author: Marcin Kowalczyk <qrczak@knm.org.pl>
Maintainer: cvs-fptools@haskell.org
Synopsis: A preprocessor that helps with writing Haskell bindings to C code
Description:
	The hsc2hs program can be used to automate some parts of the
	process of writing Haskell bindings to C code.	It reads an
	almost-Haskell source file with embedded special constructs, and
	outputs a real Haskell file with these constructs processed, based
	on information taken from some C headers.  The extra constructs
	provide Haskell counterparts of C types, values of C constants,
	including sizes of C types, and access to fields of C structs.
	.
	Actually hsc2hs does not output the Haskell file directly.  It
	creates a C program that includes the headers, gets automatically
	compiled and run.  That program outputs the Haskell code.
Category: Development
Data-Files: template-hsc.h

Executable: hsc2hs
Main-Is: Main.hs
-- needed for ReadP (used by Data.Version)
Hugs-Options: -98
Extensions: CPP, ForeignFunctionInterface
